Implemented support for Splines